--- a/chat.html
+++ b/chat.html
@@ -21,23 +21,23 @@
 html, body { height:100%; font-family:Arial,sans-serif; background: var(--color-bg-light); }
 
 /* HEADER */
-header { background:#fff; padding:10px; border-bottom:1px solid #ddd; z-index:100; display:flex; align-items:center; gap:8px; }
+header { background:#fff; padding:10px; border-bottom:1px solid #ddd; z-index:200; position:fixed; top:0; left:0; right:0; }
 header h1 { display:flex; align-items:center; gap:8px; color: var(--color-primary); font-size:1.4em; }
 .emoji-head { width:32px; height:32px; }
 
 /* TOPBAR */
-#topBar { display:flex; align-items:center; gap:8px; padding:6px 10px; background:#fafafa; border-bottom:1px solid #ddd; flex-wrap:wrap; overflow-x:auto; z-index:100; }
+#topBar { display:flex; align-items:center; gap:8px; padding:6px 10px; background:#fafafa; border-bottom:1px solid #ddd; flex-wrap:wrap; overflow-x:auto; z-index:150; margin-top:52px; }
 #topBar button { background:white; color:var(--color-primary); border:1px solid var(--color-primary); padding:6px 10px; border-radius:5px; cursor:pointer; flex-shrink:0; }
 #topBar span { font-size:0.9em; flex-shrink:0; }
 
 /* MOBILE USERS HORIZONTAL */
-#mobileUserLine { display:none; overflow-x:hidden; white-space:nowrap; background:#fafafa; padding:6px 4px; border-bottom:1px solid #ddd; }
+#mobileUserLine { display:none; overflow-x:hidden; white-space:nowrap; background:#fafafa; padding:6px 4px; border-bottom:1px solid #ddd; margin-top:5px; }
 .userItemMobile { width:50px; height:50px; border-radius:50%; overflow:hidden; display:inline-block; margin-right:6px; border:2px solid transparent; cursor:pointer; transition: transform 0.2s; }
 .userItemMobile img { width:100%; height:100%; border-radius:50%; object-fit:cover; }
 .userItemMobile:hover { border-color:var(--color-primary); transform:scale(1.1); }
 
 /* MAIN */
-#mainContent { display:flex; flex:1; overflow:hidden; height: calc(100vh - 108px); }
+#mainContent { display:flex; flex:1; overflow:hidden; margin-top:120px; } /* header + topbar + mobileUserLine */
 
 /* USER LIST (DESKTOP) */
 #userList { width:200px; background:#fff; border-right:1px solid #ddd; overflow-y:auto; padding:8px; }
@@ -66,79 +66,16 @@ footer { background:white; color:#555; text-align:center; padding:6px; font-size
 
 /* MOBILE */
 @media(max-width:768px){
-  html, body { height:100%; overflow:visible; }
-
-  header { 
-    position:fixed; 
-    top:0; 
-    left:0; 
-    right:0; 
-    z-index:100; 
-    height:50px;
-  }
-
-  #topBar { 
-    position:fixed; 
-    top:50px; 
-    left:0; 
-    right:0; 
-    z-index:100; 
-    width:100%; 
-    height:40px;
-  }
-
-  #mobileUserLine {
-    display:flex;
-    position:fixed;
-    top:90px; 
-    left:0;
-    right:0;
-    padding:6px 4px;
-    background:#fafafa;
-    border-bottom:1px solid #ddd;
-    z-index:100;
-    overflow-x:auto;
-    white-space:nowrap;
-  }
-
-  #mainContent {
-    flex-direction:column;
-    margin-top: 130px; 
-    margin-bottom: 100px; 
-    height: auto;
-    overflow-y:auto;
-  }
-
-  #chatWindow { 
-    flex:1; 
-    overflow-y:auto; 
-    width:100%; 
-    margin-bottom:0; 
-    padding-bottom:10px; 
-  }
-
-  #chatInput { 
-    position:fixed; 
-    bottom:40px; 
-    left:0; 
-    right:0; 
-    padding:4px; 
-    background:white; 
-    z-index:50; 
-    width:100%; 
-  }
-
-  footer { 
-    position:fixed; 
-    bottom:0; 
-    left:0; 
-    right:0; 
-    z-index:100; 
-    width:100%; 
-    height:40px;
-  }
-
+  #mainContent { flex-direction:column; height: calc(100vh - 180px); } /* ajustado para header + topbar + userline + footer + input */
   #userList, #adSidebar { display:none; }
+  #mobileUserLine { display:flex; }
+  #chatWindow { flex:1; overflow-y:auto; margin-bottom:110px; width:100%; } /* espaço para input + footer */
+  #chatInput { position:fixed; bottom:30px; left:0; right:0; padding:4px; background:white; z-index:50; width:100%; }
+  footer { position:fixed; bottom:0; left:0; right:0; z-index:40; }
+  html, body { overflow:hidden; }
+  #topBar { position:fixed; top:52px; left:0; right:0; z-index:150; }
+  /* Mensagens largura mobile */
+  .msg { max-width:95%; }
 }
 </style>
 </head>
@@ -273,7 +210,7 @@ function showMessage(msg,room){
   chatWindow.scrollTop=chatWindow.scrollHeight;
 }
 
-// CHAT PRIVADO COM ACEITAÇÃO
+// CHAT PRIVADO COM ACEITAÇÃO AUTOMÁTICA
 function requestPrivateChat(uid,name){
   if(!auth.currentUser) return alert("Faça login para conversar.");
   if(uid===auth.currentUser.uid) return;
@@ -283,7 +220,6 @@ function requestPrivateChat(uid,name){
     from: auth.currentUser.uid,
     fromName: auth.currentUser.displayName
   });
-  alert(`Pedido de conversa privada enviado para ${name}.`);
 }
 
 // RECEBER PEDIDO DE CONVERSA PRIVADA
@@ -293,11 +229,18 @@ auth.onAuthStateChanged(user=>{
   db.ref(reqPath).on("child_added", snap=>{
     const data = snap.val();
     if(confirm(`${data.fromName} quer conversar com você em privado. Aceitar?`)){
-      currentChat=[user.uid,data.from].sort().join("_");
-      chatWindow.innerHTML=`<div style='text-align:center;margin:10px;color:#555;'>💬 Conversa privada com ${data.fromName}</div>`;
-      generalBtn.style.display="inline-block";
-      db.ref("private/"+currentChat).off();
-      db.ref("private/"+currentChat).on("child_added", s=>showMessage(s.val(),currentChat));
+      const chatId = [user.uid, data.from].sort().join("_");
+      currentChat = chatId;
+
+      // Atualizar ambos usuários automaticamente
+      db.ref("private/"+chatId).once("value", snap2=>{
+        chatWindow.innerHTML=`<div style='text-align:center;margin:10px;color:#555;'>💬 Conversa privada com ${data.fromName}</div>`;
+        generalBtn.style.display="inline-block";
+
+        // Ambos passam a receber mensagens do mesmo caminho
+        db.ref("private/"+chatId).off();
+        db.ref("private/"+chatId).on("child_added", s=>showMessage(s.val(), chatId));
+      });
     }
     snap.ref.remove();
   });
