--- a/chat.html
+++ b/chat.html
@@ -10,73 +10,7 @@
 <script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-database-compat.js"></script>
 
 <style>
-:root {
-  --color-bg-light: #f5f5f5;
-  --color-primary: #4CAF50;
-  --color-primary-hover: #45a049;
-}
-
-/* RESET */
-* { box-sizing: border-box; margin:0; padding:0; }
-html, body { height:100%; font-family:Arial,sans-serif; background: var(--color-bg-light); }
-
-/* HEADER */
-header { background:#fff; padding:10px; border-bottom:1px solid #ddd; z-index:200; position:fixed; top:0; left:0; right:0; }
-header h1 { display:flex; align-items:center; gap:8px; color: var(--color-primary); font-size:1.4em; }
-.emoji-head { width:32px; height:32px; }
-
-/* TOPBAR */
-#topBar { display:flex; align-items:center; gap:8px; padding:6px 10px; background:#fafafa; border-bottom:1px solid #ddd; flex-wrap:wrap; overflow-x:auto; z-index:150; margin-top:52px; }
-#topBar button { background:white; color:var(--color-primary); border:1px solid var(--color-primary); padding:6px 10px; border-radius:5px; cursor:pointer; flex-shrink:0; }
-#topBar span { font-size:0.9em; flex-shrink:0; }
-
-/* MOBILE USERS HORIZONTAL */
-#mobileUserLine { display:none; overflow-x:hidden; white-space:nowrap; background:#fafafa; padding:6px 4px; border-bottom:1px solid #ddd; margin-top:5px; }
-.userItemMobile { width:50px; height:50px; border-radius:50%; overflow:hidden; display:inline-block; margin-right:6px; border:2px solid transparent; cursor:pointer; transition: transform 0.2s; }
-.userItemMobile img { width:100%; height:100%; border-radius:50%; object-fit:cover; }
-.userItemMobile:hover { border-color:var(--color-primary); transform:scale(1.1); }
-
-/* MAIN */
-#mainContent { display:flex; flex:1; overflow:hidden; margin-top:120px; } /* header + topbar + mobileUserLine */
-
-/* USER LIST (DESKTOP) */
-#userList { width:200px; background:#fff; border-right:1px solid #ddd; overflow-y:auto; padding:8px; }
-.userItem { display:flex; align-items:center; gap:6px; margin-bottom:6px; cursor:pointer; padding:6px; border-radius:5px; }
-.userItem:hover { background:#e0f7e9; }
-.userItem img { width:28px; height:28px; border-radius:50%; }
-
-/* CHAT */
-#chatContainer { flex:1; display:flex; flex-direction:column; overflow:hidden; }
-#chatWindow { flex:1; overflow-y:auto; padding:10px; background:white; }
-.msg { margin:5px 0; padding:8px; border-radius:8px; max-width:80%; word-wrap:break-word; }
-.userMsg { background:#e0f7e9; align-self:flex-end; text-align:right; }
-.otherMsg { background:#fff8dc; align-self:flex-start; text-align:left; }
-
-/* CHAT INPUT */
-#chatInput { display:flex; border-top:1px solid #ddd; background:white; padding:4px; }
-#chatInput input { flex:1; padding:10px; font-size:1em; border:1px solid #ccc; border-radius:5px; }
-#chatInput button { background:var(--color-primary); color:white; border:none; padding:10px 14px; margin-left:4px; border-radius:5px; cursor:pointer; }
-#chatInput button:hover { background:var(--color-primary-hover); }
-
-/* ADS */
-#adSidebar { width:280px; background:#f1f1f1; border-left:1px dashed #ccc; padding:8px; text-align:center; overflow-y:auto; }
-
-/* FOOTER */
-footer { background:white; color:#555; text-align:center; padding:6px; font-size:0.85em; border-top:1px solid #ddd; }
-
-/* MOBILE */
-@media(max-width:768px){
-  #mainContent { flex-direction:column; height: calc(100vh - 180px); } /* ajustado para header + topbar + userline + footer + input */
-  #userList, #adSidebar { display:none; }
-  #mobileUserLine { display:flex; }
-  #chatWindow { flex:1; overflow-y:auto; margin-bottom:110px; width:100%; } /* espaço para input + footer */
-  #chatInput { position:fixed; bottom:30px; left:0; right:0; padding:4px; background:white; z-index:50; width:100%; }
-  footer { position:fixed; bottom:0; left:0; right:0; z-index:40; }
-  html, body { overflow:hidden; }
-  #topBar { position:fixed; top:52px; left:0; right:0; z-index:150; }
-  /* Mensagens largura mobile */
-  .msg { max-width:95%; }
-}
+/* ... Mantenha seu CSS atual ... */
 </style>
 </head>
 <body>
@@ -163,27 +97,24 @@ db.ref("online").on("value", snap=>{
   const users=snap.val()||{};
   onlineCount.textContent=`👥 ${Object.keys(users).length}`;
 
-  // DESKTOP
   userList.innerHTML="";
+  mobileUserLine.innerHTML="";
   for(const [uid,u] of Object.entries(users)){
+    // Desktop
     const div=document.createElement("div");
     div.className="userItem";
     div.innerHTML=`<img src="${u.photo||'https://cdn-icons-png.flaticon.com/512/847/847969.png'}"><span>${u.name}</span>`;
     div.onclick=()=>requestPrivateChat(uid,u.name);
     userList.appendChild(div);
+
+    // Mobile
+    const divMobile=document.createElement("div");
+    divMobile.className="userItemMobile";
+    divMobile.innerHTML=`<img src="${u.photo||'https://cdn-icons-png.flaticon.com/512/847/847969.png'}" title="${u.name}">`;
+    divMobile.onclick=()=>requestPrivateChat(uid,u.name);
+    mobileUserLine.appendChild(divMobile);
   }
 
-  // MOBILE
-  mobileUserLine.innerHTML="";
-  for(const [uid,u] of Object.entries(users)){
-    const div=document.createElement("div");
-    div.className="userItemMobile";
-    div.innerHTML=`<img src="${u.photo||'https://cdn-icons-png.flaticon.com/512/847/847969.png'}" title="${u.name}">`;
-    div.onclick=()=>requestPrivateChat(uid,u.name);
-    mobileUserLine.appendChild(div);
-  }
-
-  // INFINITE SCROLL HORIZONTAL
   startMobileScroll();
 });
 
@@ -210,7 +141,7 @@ function showMessage(msg,room){
   chatWindow.scrollTop=chatWindow.scrollHeight;
 }
 
-// CHAT PRIVADO COM ACEITAÇÃO AUTOMÁTICA
+// SOLICITAR CHAT PRIVADO
 function requestPrivateChat(uid,name){
   if(!auth.currentUser) return alert("Faça login para conversar.");
   if(uid===auth.currentUser.uid) return;
@@ -220,9 +151,10 @@ function requestPrivateChat(uid,name){
     from: auth.currentUser.uid,
     fromName: auth.currentUser.displayName
   });
+  alert(`Pedido de conversa privada enviado para ${name}.`);
 }
 
-// RECEBER PEDIDO DE CONVERSA PRIVADA
+// RECEBER PEDIDO DE CHAT PRIVADO
 auth.onAuthStateChanged(user=>{
   if(!user) return;
   const reqPath = `privateRequests/${user.uid}`;
@@ -232,15 +164,13 @@ auth.onAuthStateChanged(user=>{
       const chatId = [user.uid, data.from].sort().join("_");
       currentChat = chatId;
 
-      // Atualizar ambos usuários automaticamente
-      db.ref("private/"+chatId).once("value", snap2=>{
-        chatWindow.innerHTML=`<div style='text-align:center;margin:10px;color:#555;'>💬 Conversa privada com ${data.fromName}</div>`;
-        generalBtn.style.display="inline-block";
+      // Atualiza o chatWindow e habilita botões
+      chatWindow.innerHTML=`<div style='text-align:center;margin:10px;color:#555;'>💬 Conversa privada com ${data.fromName}</div>`;
+      generalBtn.style.display="inline-block";
 
-        // Ambos passam a receber mensagens do mesmo caminho
-        db.ref("private/"+chatId).off();
-        db.ref("private/"+chatId).on("child_added", s=>showMessage(s.val(), chatId));
-      });
+      // Ambos usuários passam a ouvir o mesmo chat privado
+      db.ref("private/"+chatId).off();
+      db.ref("private/"+chatId).on("child_added", s=>showMessage(s.val(), chatId));
     }
     snap.ref.remove();
   });
