--- a/chat.html
+++ b/chat.html
@@ -10,7 +10,136 @@
 <script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-database-compat.js"></script>
 
 <style>
-/* ... Mantenha seu CSS atual ... */
+:root {
+  --color-bg-light: #f5f5f5;
+  --color-primary: #4CAF50;
+  --color-primary-hover: #45a049;
+}
+
+/* RESET */
+* { box-sizing: border-box; margin:0; padding:0; }
+html, body { height:100%; font-family:Arial,sans-serif; background: var(--color-bg-light); }
+
+/* HEADER */
+header { background:#fff; padding:10px; border-bottom:1px solid #ddd; z-index:100; display:flex; align-items:center; gap:8px; }
+header h1 { display:flex; align-items:center; gap:8px; color: var(--color-primary); font-size:1.4em; }
+.emoji-head { width:32px; height:32px; }
+
+/* TOPBAR */
+#topBar { display:flex; align-items:center; gap:8px; padding:6px 10px; background:#fafafa; border-bottom:1px solid #ddd; flex-wrap:wrap; overflow-x:auto; z-index:100; }
+#topBar button { background:white; color:var(--color-primary); border:1px solid var(--color-primary); padding:6px 10px; border-radius:5px; cursor:pointer; flex-shrink:0; }
+#topBar span { font-size:0.9em; flex-shrink:0; }
+
+/* MOBILE USERS HORIZONTAL */
+#mobileUserLine { display:none; overflow-x:hidden; white-space:nowrap; background:#fafafa; padding:6px 4px; border-bottom:1px solid #ddd; }
+.userItemMobile { width:50px; height:50px; border-radius:50%; overflow:hidden; display:inline-block; margin-right:6px; border:2px solid transparent; cursor:pointer; transition: transform 0.2s; }
+.userItemMobile img { width:100%; height:100%; border-radius:50%; object-fit:cover; }
+.userItemMobile:hover { border-color:var(--color-primary); transform:scale(1.1); }
+
+/* MAIN */
+#mainContent { display:flex; flex:1; overflow:hidden; height: calc(100vh - 108px); }
+
+/* USER LIST (DESKTOP) */
+#userList { width:200px; background:#fff; border-right:1px solid #ddd; overflow-y:auto; padding:8px; }
+.userItem { display:flex; align-items:center; gap:6px; margin-bottom:6px; cursor:pointer; padding:6px; border-radius:5px; }
+.userItem:hover { background:#e0f7e9; }
+.userItem img { width:28px; height:28px; border-radius:50%; }
+
+/* CHAT */
+#chatContainer { flex:1; display:flex; flex-direction:column; overflow:hidden; }
+#chatWindow { flex:1; overflow-y:auto; padding:10px; background:white; }
+.msg { margin:5px 0; padding:8px; border-radius:8px; max-width:80%; word-wrap:break-word; }
+.userMsg { background:#e0f7e9; align-self:flex-end; text-align:right; }
+.otherMsg { background:#fff8dc; align-self:flex-start; text-align:left; }
+
+/* CHAT INPUT */
+#chatInput { display:flex; border-top:1px solid #ddd; background:white; padding:4px; }
+#chatInput input { flex:1; padding:10px; font-size:1em; border:1px solid #ccc; border-radius:5px; }
+#chatInput button { background:var(--color-primary); color:white; border:none; padding:10px 14px; margin-left:4px; border-radius:5px; cursor:pointer; }
+#chatInput button:hover { background:var(--color-primary-hover); }
+
+/* ADS */
+#adSidebar { width:280px; background:#f1f1f1; border-left:1px dashed #ccc; padding:8px; text-align:center; overflow-y:auto; }
+
+/* FOOTER */
+footer { background:white; color:#555; text-align:center; padding:6px; font-size:0.85em; border-top:1px solid #ddd; }
+
+/* MOBILE */
+@media(max-width:768px){
+  html, body { height:100%; overflow:visible; }
+
+  header { 
+    position:fixed; 
+    top:0; 
+    left:0; 
+    right:0; 
+    z-index:100; 
+    height:50px;
+  }
+
+  #topBar { 
+    position:fixed; 
+    top:50px; 
+    left:0; 
+    right:0; 
+    z-index:100; 
+    width:100%; 
+    height:40px;
+  }
+
+  #mobileUserLine {
+    display:flex;
+    position:fixed;
+    top:90px; 
+    left:0;
+    right:0;
+    padding:6px 4px;
+    background:#fafafa;
+    border-bottom:1px solid #ddd;
+    z-index:100;
+    overflow-x:auto;
+    white-space:nowrap;
+  }
+
+  #mainContent {
+    flex-direction:column;
+    margin-top: 130px; 
+    margin-bottom: 100px; 
+    height: auto;
+    overflow-y:auto;
+  }
+
+  #chatWindow { 
+    flex:1; 
+    overflow-y:auto; 
+    width:100%; 
+    margin-bottom:0; 
+    padding-bottom:10px; 
+  }
+
+  #chatInput { 
+    position:fixed; 
+    bottom:40px; 
+    left:0; 
+    right:0; 
+    padding:4px; 
+    background:white; 
+    z-index:50; 
+    width:100%; 
+  }
+
+  footer { 
+    position:fixed; 
+    bottom:0; 
+    left:0; 
+    right:0; 
+    z-index:100; 
+    width:100%; 
+    height:40px;
+  }
+
+  #userList, #adSidebar { display:none; }
+}
 </style>
 </head>
 <body>
@@ -97,24 +226,27 @@ db.ref("online").on("value", snap=>{
   const users=snap.val()||{};
   onlineCount.textContent=`👥 ${Object.keys(users).length}`;
 
+  // DESKTOP
   userList.innerHTML="";
-  mobileUserLine.innerHTML="";
   for(const [uid,u] of Object.entries(users)){
-    // Desktop
     const div=document.createElement("div");
     div.className="userItem";
     div.innerHTML=`<img src="${u.photo||'https://cdn-icons-png.flaticon.com/512/847/847969.png'}"><span>${u.name}</span>`;
     div.onclick=()=>requestPrivateChat(uid,u.name);
     userList.appendChild(div);
-
-    // Mobile
-    const divMobile=document.createElement("div");
-    divMobile.className="userItemMobile";
-    divMobile.innerHTML=`<img src="${u.photo||'https://cdn-icons-png.flaticon.com/512/847/847969.png'}" title="${u.name}">`;
-    divMobile.onclick=()=>requestPrivateChat(uid,u.name);
-    mobileUserLine.appendChild(divMobile);
   }
 
+  // MOBILE
+  mobileUserLine.innerHTML="";
+  for(const [uid,u] of Object.entries(users)){
+    const div=document.createElement("div");
+    div.className="userItemMobile";
+    div.innerHTML=`<img src="${u.photo||'https://cdn-icons-png.flaticon.com/512/847/847969.png'}" title="${u.name}">`;
+    div.onclick=()=>requestPrivateChat(uid,u.name);
+    mobileUserLine.appendChild(div);
+  }
+
+  // INFINITE SCROLL HORIZONTAL
   startMobileScroll();
 });
 
@@ -141,7 +273,7 @@ function showMessage(msg,room){
   chatWindow.scrollTop=chatWindow.scrollHeight;
 }
 
-// SOLICITAR CHAT PRIVADO
+// CHAT PRIVADO COM ACEITAÇÃO
 function requestPrivateChat(uid,name){
   if(!auth.currentUser) return alert("Faça login para conversar.");
   if(uid===auth.currentUser.uid) return;
@@ -154,23 +286,18 @@ function requestPrivateChat(uid,name){
   alert(`Pedido de conversa privada enviado para ${name}.`);
 }
 
-// RECEBER PEDIDO DE CHAT PRIVADO
+// RECEBER PEDIDO DE CONVERSA PRIVADA
 auth.onAuthStateChanged(user=>{
   if(!user) return;
   const reqPath = `privateRequests/${user.uid}`;
   db.ref(reqPath).on("child_added", snap=>{
     const data = snap.val();
     if(confirm(`${data.fromName} quer conversar com você em privado. Aceitar?`)){
-      const chatId = [user.uid, data.from].sort().join("_");
-      currentChat = chatId;
-
-      // Atualiza o chatWindow e habilita botões
+      currentChat=[user.uid,data.from].sort().join("_");
       chatWindow.innerHTML=`<div style='text-align:center;margin:10px;color:#555;'>💬 Conversa privada com ${data.fromName}</div>`;
       generalBtn.style.display="inline-block";
-
-      // Ambos usuários passam a ouvir o mesmo chat privado
-      db.ref("private/"+chatId).off();
-      db.ref("private/"+chatId).on("child_added", s=>showMessage(s.val(), chatId));
+      db.ref("private/"+currentChat).off();
+      db.ref("private/"+currentChat).on("child_added", s=>showMessage(s.val(),currentChat));
     }
     snap.ref.remove();
   });
