--- a/chat.html
+++ b/chat.html
@@ -32,16 +32,28 @@ header h1 { display:flex; align-items:center; gap:8px; color: var(--color-primar
 
 /* MOBILE USERS HORIZONTAL */
 #mobileUserLine { display:none; overflow-x:hidden; white-space:nowrap; background:#fafafa; padding:6px 4px; border-bottom:1px solid #ddd; }
-.userItemMobile { width:50px; height:50px; border-radius:50%; overflow:hidden; display:inline-block; margin-right:6px; border:2px solid transparent; cursor:pointer; transition: transform 0.2s; }
+.userItemMobile { width:50px; height:50px; border-radius:50%; overflow:hidden; display:inline-block; margin-right:6px; border:2px solid transparent; cursor:pointer; transition: transform 0.2s; position:relative; }
 .userItemMobile img { width:100%; height:100%; border-radius:50%; object-fit:cover; }
 .userItemMobile:hover { border-color:var(--color-primary); transform:scale(1.1); }
+
+/* BOLINHA DE NOTIFICAÇÃO */
+.notify-dot {
+  position:absolute;
+  top:2px;
+  right:2px;
+  width:10px;
+  height:10px;
+  background:red;
+  border-radius:50%;
+  display:none;
+}
 
 /* MAIN */
 #mainContent { display:flex; flex:1; overflow:hidden; height: calc(100vh - 108px); }
 
 /* USER LIST (DESKTOP) */
 #userList { width:200px; background:#fff; border-right:1px solid #ddd; overflow-y:auto; padding:8px; }
-.userItem { display:flex; align-items:center; gap:6px; margin-bottom:6px; cursor:pointer; padding:6px; border-radius:5px; }
+.userItem { display:flex; align-items:center; gap:6px; margin-bottom:6px; cursor:pointer; padding:6px; border-radius:5px; position:relative; }
 .userItem:hover { background:#e0f7e9; }
 .userItem img { width:28px; height:28px; border-radius:50%; }
 
@@ -68,29 +80,14 @@ footer { background:white; color:#555; text-align:center; padding:6px; font-size
 @media(max-width:768px){
   html, body { height:100%; overflow:visible; }
 
-  header { 
-    position:fixed; 
-    top:0; 
-    left:0; 
-    right:0; 
-    z-index:100; 
-    height:50px;
-  }
+  header { position:fixed; top:0; left:0; right:0; z-index:100; height:50px; }
 
-  #topBar { 
-    position:fixed; 
-    top:50px; 
-    left:0; 
-    right:0; 
-    z-index:100; 
-    width:100%; 
-    height:40px;
-  }
+  #topBar { position:fixed; top:50px; left:0; right:0; z-index:100; width:100%; height:40px; }
 
   #mobileUserLine {
     display:flex;
     position:fixed;
-    top:90px; 
+    top:90px;
     left:0;
     right:0;
     padding:6px 4px;
@@ -103,38 +100,30 @@ footer { background:white; color:#555; text-align:center; padding:6px; font-size
 
   #mainContent {
     flex-direction:column;
-    margin-top: 130px; 
-    margin-bottom: 100px; 
+    margin-top: 130px;
+    margin-bottom: 100px;
     height: auto;
     overflow-y:auto;
   }
 
-  #chatWindow { 
-    flex:1; 
-    overflow-y:auto; 
-    width:100%; 
-    margin-bottom:0; 
-    padding-bottom:10px; 
+  #chatInput {
+    position:fixed;
+    bottom:40px;
+    left:0;
+    right:0;
+    padding:4px;
+    background:white;
+    z-index:50;
+    width:100%;
   }
 
-  #chatInput { 
-    position:fixed; 
-    bottom:40px; 
-    left:0; 
-    right:0; 
-    padding:4px; 
-    background:white; 
-    z-index:50; 
-    width:100%; 
-  }
-
-  footer { 
-    position:fixed; 
-    bottom:0; 
-    left:0; 
-    right:0; 
-    z-index:100; 
-    width:100%; 
+  footer {
+    position:fixed;
+    bottom:0;
+    left:0;
+    right:0;
+    z-index:100;
+    width:100%;
     height:40px;
   }
 
@@ -172,8 +161,10 @@ footer { background:white; color:#555; text-align:center; padding:6px; font-size
 
 <footer>© 2025 Славянский клуб — Aprenda Russo e Português com diversão!</footer>
 
+<!-- SOM DE NOTIFICAÇÃO -->
+<audio id="msgSound" src="https://cdn.pixabay.com/download/audio/2022/03/15/audio_2a8c4e8d5a.mp3?filename=message-pop-alert-23584.mp3" preload="auto"></audio>
+
 <script>
-// Firebase config
 const firebaseConfig = {
   apiKey: "AIzaSyCYJCgfil5HKrCWtB14zwdicDaEcldHU6A",
   authDomain: "dimitry-rusian.firebaseapp.com",
@@ -197,11 +188,12 @@ const alertaLogin=document.getElementById("alertaLogin");
 const onlineCount=document.getElementById("onlineCount");
 const generalBtn=document.getElementById("generalBtn");
 const mobileUserLine=document.getElementById("mobileUserLine");
+const msgSound=document.getElementById("msgSound");
 let currentChat="global";
 
-// LOGIN/LOGOUT
-loginBtn.onclick = ()=> auth.signInWithPopup(new firebase.auth.GoogleAuthProvider());
-logoutBtn.onclick = ()=> auth.signOut();
+// LOGIN
+loginBtn.onclick=()=>auth.signInWithPopup(new firebase.auth.GoogleAuthProvider());
+logoutBtn.onclick=()=>auth.signOut();
 
 auth.onAuthStateChanged(user=>{
   if(user){
@@ -212,7 +204,7 @@ auth.onAuthStateChanged(user=>{
     sendBtn.disabled=false;
     db.ref("online/"+user.uid).set({name:user.displayName,photo:user.photoURL});
     db.ref("online/"+user.uid).onDisconnect().remove();
-  } else{
+  } else {
     loginBtn.style.display="inline-block";
     logoutBtn.style.display="none";
     alertaLogin.style.display="inline-block";
@@ -225,34 +217,28 @@ auth.onAuthStateChanged(user=>{
 db.ref("online").on("value", snap=>{
   const users=snap.val()||{};
   onlineCount.textContent=`👥 ${Object.keys(users).length}`;
-
-  // DESKTOP
   userList.innerHTML="";
+  mobileUserLine.innerHTML="";
+
   for(const [uid,u] of Object.entries(users)){
     const div=document.createElement("div");
     div.className="userItem";
-    div.innerHTML=`<img src="${u.photo||'https://cdn-icons-png.flaticon.com/512/847/847969.png'}"><span>${u.name}</span>`;
+    div.innerHTML=`<img src="${u.photo}"><span>${u.name}</span><div class='notify-dot'></div>`;
     div.onclick=()=>requestPrivateChat(uid,u.name);
     userList.appendChild(div);
-  }
 
-  // MOBILE
-  mobileUserLine.innerHTML="";
-  for(const [uid,u] of Object.entries(users)){
-    const div=document.createElement("div");
-    div.className="userItemMobile";
-    div.innerHTML=`<img src="${u.photo||'https://cdn-icons-png.flaticon.com/512/847/847969.png'}" title="${u.name}">`;
-    div.onclick=()=>requestPrivateChat(uid,u.name);
-    mobileUserLine.appendChild(div);
+    const mob=document.createElement("div");
+    mob.className="userItemMobile";
+    mob.innerHTML=`<img src="${u.photo}" title="${u.name}"><div class='notify-dot'></div>`;
+    mob.onclick=()=>requestPrivateChat(uid,u.name);
+    mobileUserLine.appendChild(mob);
   }
-
-  // INFINITE SCROLL HORIZONTAL
   startMobileScroll();
 });
 
 // ENVIAR MENSAGEM
-sendBtn.onclick = sendMessage;
-msgInput.addEventListener("keypress", e=>{if(e.key==="Enter") sendMessage();});
+sendBtn.onclick=sendMessage;
+msgInput.addEventListener("keypress",e=>{if(e.key==="Enter")sendMessage();});
 function sendMessage(){
   const text=msgInput.value.trim();
   const user=auth.currentUser;
@@ -262,10 +248,15 @@ function sendMessage(){
   msgInput.value="";
 }
 
-// RECEBER MENSAGENS
-db.ref("chatGlobal").on("child_added", snap=>showMessage(snap.val(),"chatGlobal"));
+// RECEBER MENSAGENS GERAIS + NOTIFICAÇÕES
+db.ref("chatGlobal").on("child_added",snap=>{
+  const msg=snap.val();
+  showMessage(msg,"chatGlobal");
+  if(msg.user!==auth.currentUser?.displayName && currentChat!=="global") playNotification();
+});
+
 function showMessage(msg,room){
-  if(room!=="chatGlobal" && room!==currentChat) return;
+  if(room!=="chatGlobal" && room!==currentChat)return;
   const div=document.createElement("div");
   div.className=msg.user===auth.currentUser?.displayName?"msg userMsg":"msg otherMsg";
   div.textContent=`${msg.user}: ${msg.text}`;
@@ -273,41 +264,50 @@ function showMessage(msg,room){
   chatWindow.scrollTop=chatWindow.scrollHeight;
 }
 
-// CHAT PRIVADO COM ACEITAÇÃO
+// NOTIFICAÇÃO SONORA + VISUAL
+function playNotification(){
+  msgSound.currentTime=0;
+  msgSound.play();
+  document.title="🔔 Nova mensagem!";
+  setTimeout(()=>document.title="чат 🌍",2000);
+}
+
+// PEDIDO DE CHAT PRIVADO
 function requestPrivateChat(uid,name){
   if(!auth.currentUser) return alert("Faça login para conversar.");
   if(uid===auth.currentUser.uid) return;
-
-  const reqPath = `privateRequests/${uid}`;
-  db.ref(reqPath).push({
-    from: auth.currentUser.uid,
-    fromName: auth.currentUser.displayName
-  });
+  db.ref(`privateRequests/${uid}`).push({from:auth.currentUser.uid,fromName:auth.currentUser.displayName});
   alert(`Pedido de conversa privada enviado para ${name}.`);
 }
 
-// RECEBER PEDIDO DE CONVERSA PRIVADA
+// RECEBE PEDIDOS
 auth.onAuthStateChanged(user=>{
-  if(!user) return;
-  const reqPath = `privateRequests/${user.uid}`;
-  db.ref(reqPath).on("child_added", snap=>{
-    const data = snap.val();
+  if(!user)return;
+  db.ref(`privateRequests/${user.uid}`).on("child_added",snap=>{
+    const data=snap.val();
     if(confirm(`${data.fromName} quer conversar com você em privado. Aceitar?`)){
-      currentChat=[user.uid,data.from].sort().join("_");
-      chatWindow.innerHTML=`<div style='text-align:center;margin:10px;color:#555;'>💬 Conversa privada com ${data.fromName}</div>`;
-      generalBtn.style.display="inline-block";
-      db.ref("private/"+currentChat).off();
-      db.ref("private/"+currentChat).on("child_added", s=>showMessage(s.val(),currentChat));
+      startPrivateChat(user.uid,data.from,data.fromName);
     }
     snap.ref.remove();
   });
 });
 
-// VOLTAR CHAT GERAL
+function startPrivateChat(uid1,uid2,otherName){
+  currentChat=[uid1,uid2].sort().join("_");
+  chatWindow.innerHTML=`<div style='text-align:center;margin:10px;color:#555;'>💬 Conversa privada com ${otherName}</div>`;
+  generalBtn.style.display="inline-block";
+  db.ref("private/"+currentChat).off();
+  db.ref("private/"+currentChat).on("child_added",s=>{
+    showMessage(s.val(),currentChat);
+    if(s.val().user!==auth.currentUser.displayName) playNotification();
+  });
+}
+
+// VOLTAR
 generalBtn.onclick=()=>{
   currentChat="global";
   chatWindow.innerHTML="";
-  db.ref("chatGlobal").once("value",s=>{s.forEach(m=>showMessage(m.val(),"chatGlobal"));});
+  db.ref("chatGlobal").once("value",s=>s.forEach(m=>showMessage(m.val(),"chatGlobal")));
   generalBtn.style.display="none";
 };
 
@@ -315,13 +315,11 @@ generalBtn.onclick=()=>{
 let scrollInterval;
 function startMobileScroll(){
   clearInterval(scrollInterval);
-  const container = mobileUserLine;
-  if(!container) return;
-  scrollInterval = setInterval(()=>{
-    container.scrollLeft += 1;
-    if(container.scrollLeft >= container.scrollWidth - container.clientWidth){
-      container.scrollLeft = 0;
-    }
+  const container=mobileUserLine;
+  if(!container)return;
+  scrollInterval=setInterval(()=>{
+    container.scrollLeft+=1;
+    if(container.scrollLeft>=container.scrollWidth-container.clientWidth) container.scrollLeft=0;
   },20);
 }
 </script>
